--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
   <script src="/assets/plugins/jquery/jquery.min.js"></script>
   <script src="/assets/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="/assets/dist/js/adminlte.min.js"></script>
+  <script src="https://kit.fontawesome.com/278553e5f7.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
